package org.example;

public enum Result {
    LOSS, WIN, TIE;
}
