package org.example.game;

public enum ElementType {
    FIRE, WATER, NORMAL;
}
