@startuml
class User
{
    -Profile profile
    -ArrayList<Card> stack
    -boolean isInBattleLobby = false
    +void decreaseCoins()
    +int countCardsInDeck()
    +void printCards()
    +void printDeck()
    +ArrayList<Card> getDeck()
    +void setDeck(ArrayList<String> card_ids)
    +Card getRandomCardFromDeck()
    +removeCard(String card_id)
}
class Profile
{
    -String user_id
    -String username
    -String password
    -String token
    -int coins = 20
    -int eloPoints = 100
    -String bio
    -String image
}
enum Result
{
    LOSS
    WIN
    TIE
}
enum ElementType
{
    FIRE
    WATER
    NORMAL
    NONE
}
class Card
{
    -String id
    -String name
    -float damage
    -ElementType elementType
    -boolean isInDeck
    -MonsterType monsterType
    +void setElementType()
    +void setMonsterType()
    +isMonsterCard()
    +isSpellCard()
}
class Battle
{
    -final User userOne
    -final User userTwo
    -int winner_id
    -int looser_id
    -ArrayList<String> log
    -boolean tie = false
    +final ElementType[][] effectiveMatrix
    +void runBattle()
    +Card getBetterCard(Card userOneCard, Card userTwoCard)
    +Card monsterFight(Card userOneCard, Card userTwoCard)
    +Card spellMixFight(Card userOneCard, Card userTwoCard)
    +Card compareDamage(float userOneDam, float userTwoDam, Card userOneCard, Card userTwoCard)
    +String getRoundLog(...)
    +void setNewEloPoints(int userOneElo, int userTwoElo, Result result)
    +void setWinnerLooser(int roundsPlayed)
    +void setEffectiveMatrix()
}
class Shop
{

}
class Game
{
    -ArrayList<User> users
    -Shop shop
    +void addUserToGame(User user)
    +boolean checkPlayerToken(String token, boolean onlyAdmin)
    +User getUser(String token)
    +String getUsernameFromToken(String token)
    +Battle runNewBattle(User userOne, User userTwo)
    +User getWaitingUserForBattle()
}

User "1" o-- "0..*" Card : "owns"
Game "1" *-- "0..*" Battle : "take place"
Game "1" *-- "0..*" User : "has"
Battle "1..*" *-- "2" User : "is battled"
Result "1" *-- "1..*" Battle : "ends in"
Profile "1" *-- "1" User : "has"
Shop "1" o-- "1..*" User : "trades Cards"
Shop "1" o-- "1..*" Card : "sells"
Game "1" *-- "1" Shop : "has"
ElementType "1" *-- "0..*" Card : "is"
@enduml